# EAM-Plugin

./: .gitignore  .godotignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  SETUP.md  build.bat  build.sh  compiler_launcher.bat  compiler_launcher.sh  project.godot
.github/workflows/: build-release.yml
addons/eam/: .gdextension  .gdextension.uid  eam_dock.gd  eam_dock.gd.uid  eam_dock.tscn  eam_plugin.gd  eam_plugin.gd.uid  plugin.cfg
addons/eam/icons/: plugin_icon.svg.import  plugin_icon_16.svg.import  plugin_icon_256.svg.import
extension/include/: data_cache_manager.hpp  dynamic_asset_indexer.hpp  dynmaic_prefix_handler.hpp  entity_template_manager.hpp  identifier.hpp  pugiconfig.hpp  register_types.hpp  xml_loader.hpp
extension/src/: data_cache_manager.cpp  dynamic_asset_indexer.cpp  dynmaic_prefix_handler.cpp  entity_template_manager.cpp  identifier.cpp  indexing_functions.cpp  register_types.cpp  xml_loader.cpp
